Made quick necessary adjustments to compile it on 6.1.2 CE GA3. Some of the functions might be unavailable